<resources>
    <!-- General -->
    <string name="app_name">Android-MISL-Control</string>
    <string name="hello_world">Hello world!</string>

    <!-- Data fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ch1_command">CH1 command</string>
    <string name="ch2_command">CH2 command</string>
    <string name="x_euler">X Euler:</string>
    <string name="float_sample_value">0.0000</string>
    <string name="y_euler">Y Euler:</string>
    <string name="z_euler">Z Euler:</string>
    <string name="x_accel">X Accel:</string>
    <string name="y_accel">Y Accel:</string>
    <string name="z_accel">Z Accel:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>

    <!-- Dialog setup wizard fragment -->
    <string name="skip">Skip</string>
    <string name="setup">Setup</string>
    <string name="steering_command">Steering command</string>
    <string name="straight_movement_command">Straight movement</string>

    <!-- Google Play Services -->
    <string name="play_services_legal_notices_title">Legal Notices</string>
    <string name="title_activity_model3_d">Model3DActivity</string>
    <string name="title_activity_about">AboutActivity</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="loadingMessage">Initializing…</string>
    <string name="setting_controlType_key">controlTypeKey</string>
    <string name="setting_controlType_joystick">joystick</string>
    <string name="setting_controlType_sensor">sensor</string>
    <string name="title_activity_video_steam_sender">VideoSteamSenderActivity</string>
    <string name="wizard_step_1">Make sure batteries are charged and plugged in for both ASEP and your device</string>
    <string name="wizard_step_2">Flip the power switch on the T-rex board to power on.</string>
    <string name="wizard_step_3">There is a small smd button on the MISL stack second board from the bottom. \nPress this button to initialize ASEP.</string>
    <string name="wizard_step_4">Connect the your WiFi to the WiFi of ASEP.</string>

    <!-- Accelerometer Fragment -->
    <string name="x_acceleration">X-Acceleration</string>
    <string name="y_acceleration">Y-Acceleration</string>
    <string name="z_acceleration">Z-Acceleration</string>
    <string name="licenses">Licenses</string>
    <string name="apacheLicense">Apache v2.0</string>
    <string name="openSourceLicenses">Open Source Licenses</string>
    <string name="preferenceKey_openSourceLicenses">openSourceLicenses</string>
    <string name="contributors">Benjamin Sautermeister \nPhilipp Fent</string>
    <string name="contributorsTitle">Contributors</string>
    <string name="linkToGithubSummary">Source code and documentation of this app</string>
    <string name="github">Github</string>
    <string name="mislSummary">The Modular Integrated Stackable Layer architecture ASEP is based on</string>
    <string name="misl">MISL</string>
    <string name="universities"><![CDATA[Texas A&M University \nTechnical University of Munich]]></string>
    <string name="aboutPreferences">About</string>
    <string name="controlsTitle">Controls</string>
    <string name="controlsSummary">Control configuration to steer ASEP.</string>
    <string name="videoStreamTitle">Video Stream Sender</string>
    <string name="aboutTitle">About the app</string>
    <string name="networkTitle">Network</string>
    <string name="networkSummary">Network configuration to set up the ASEP connectioin.</string>
    <string name="wifi_ssid">ASEP WiFi SSID</string>
    <string name="preferenceKey_ssid">asep_wifi_ssid</string>
    <string name="wifi_ssid_summary">The WiFi SSID this app tries to connect to</string>
    <string name="wifi_pass">ASEP WiFi passphrase</string>
    <string name="preferenceKey_wifiPass">asep_wifi_pass</string>
    <string name="wifi_pass_summary">The WiFi passphrase this app tries for autoconnecting to ASEP</string>
    <string name="wifi_hint">************</string>
    <string name="ip_address">ASEP IP address</string>
    <string name="preferenceKey_ipaddr">asep_ip</string>
    <string name="ip_address_summary">The IP address ASEP is listening on. \nDon\'t change this, if you don\'t know what you are doing</string>
    <string name="network_port">ASEP port</string>
    <string name="preferenceKey_port">asep_port</string>
    <string name="network_port_summary">The network port ASEP is listening on. \nDon\'t change this, if you don\'t know what you are doing</string>
    <string name="link_misl_esetwiki">http://eset-wiki.net/index.php?title=Modular_Integrated_Stackable_Layer</string>
    <string name="link_github_mislcontrol">https://github.com/pfent/Android-MISL-Control</string>
    <string name="control_category">Control Settings</string>
    <string name="control_type">Control Type</string>
    <string name="control_type_summary">Select how you would like to control ASEP.</string>
</resources>
